manifests/dev/audiobookshelf/Service-audiobookshelf.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: audiobookshelf
    app.kubernetes.io/name: audiobookshelf
  type: ClusterIP
