manifests/dev/audiobookshelf/Ingress-audiobookshelf-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: audiobookshelf-local
  namespace: audiobookshelf
spec:
  ingressClassName: traefik
  rules:
    - host: audiobookshelf.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - audiobookshelf.home.kronkltd.net
      secretName: audiobookshelf-local-tls
