manifests/dev/audiobookshelf/Ingress-audiobookshelf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ingressClassName: traefik
  rules:
    - host: audiobookshelf.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - audiobookshelf.home.kronkltd.net
